force-app/main/default/objects/Transaction__c/fields/Balance_After_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Balance_After_Transaction__c</fullName>
    <label>Balance After Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>