force-app/main/default/objects/Transaction__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Account</description>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>