force-app/main/default/objects/Transaction__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>