force-app/main/default/objects/Transaction__c/fields/Transaction_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Mode__c</fullName>
    <label>Transaction Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>